src/refind_btrfs/boot/antlr4/RefindConfigParser.py
# Generated from /home/luka/Projects/Python/refind-btrfs/src/refind_btrfs/boot/antlr4/RefindConfigParser.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class RefindConfigParser ( Parser ):

    grammarFileName = "RefindConfigParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'volume'", 
                     "'loader'", "'initrd'", "'icon'", "<INVALID>", "<INVALID>", 
                     "'options'", "'add_options'", "'firmware_bootnum'", 
                     "'disabled'", "'include'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "WHITESPACE", "NEWLINE", "EMPTY", "COMMENT", 
                      "IGNORED_OPTION", "MENU_ENTRY", "VOLUME", "LOADER", 
                      "INITRD", "ICON", "OS_TYPE", "GRAPHICS", "BOOT_OPTIONS", 
                      "ADD_BOOT_OPTIONS", "FIRMWARE_BOOTNUM", "DISABLED", 
                      "INCLUDE", "OPEN_BRACE", "CLOSE_BRACE", "HEX_INTEGER", 
                      "STRING", "OS_TYPE_PARAMETER", "GRAPHICS_PARAMETER" ]

    RULE_refind = 0
    RULE_config_option = 1
    RULE_boot_stanza = 2
    RULE_menu_entry = 3
    RULE_main_option = 4
    RULE_volume = 5
    RULE_loader = 6
    RULE_main_initrd = 7
    RULE_icon = 8
    RULE_os_type = 9
    RULE_graphics = 10
    RULE_main_boot_options = 11
    RULE_firmware_bootnum = 12
    RULE_disabled = 13
    RULE_sub_menu = 14
    RULE_sub_option = 15
    RULE_sub_initrd = 16
    RULE_sub_boot_options = 17
    RULE_add_boot_options = 18
    RULE_include = 19

    ruleNames =  [ "refind", "config_option", "boot_stanza", "menu_entry", 
                   "main_option", "volume", "loader", "main_initrd", "icon", 
                   "os_type", "graphics", "main_boot_options", "firmware_bootnum", 
                   "disabled", "sub_menu", "sub_option", "sub_initrd", "sub_boot_options", 
                   "add_boot_options", "include" ]

    EOF = Token.EOF
    WHITESPACE=1
    NEWLINE=2
    EMPTY=3
    COMMENT=4
    IGNORED_OPTION=5
    MENU_ENTRY=6
    VOLUME=7
    LOADER=8
    INITRD=9
    ICON=10
    OS_TYPE=11
    GRAPHICS=12
    BOOT_OPTIONS=13
    ADD_BOOT_OPTIONS=14
    FIRMWARE_BOOTNUM=15
    DISABLED=16
    INCLUDE=17
    OPEN_BRACE=18
    CLOSE_BRACE=19
    HEX_INTEGER=20
    STRING=21
    OS_TYPE_PARAMETER=22
    GRAPHICS_PARAMETER=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RefindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(RefindConfigParser.EOF, 0)

        def config_option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RefindConfigParser.Config_optionContext)
            else:
                return self.getTypedRuleContext(RefindConfigParser.Config_optionContext,i)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_refind

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRefind" ):
                return visitor.visitRefind(self)
            else:
                return visitor.visitChildren(self)




    def refind(self):

        localctx = RefindConfigParser.RefindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_refind)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==RefindConfigParser.MENU_ENTRY or _la==RefindConfigParser.INCLUDE:
                self.state = 40
                self.config_option()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(RefindConfigParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_optionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def boot_stanza(self):
            return self.getTypedRuleContext(RefindConfigParser.Boot_stanzaContext,0)


        def include(self):
            return self.getTypedRuleContext(RefindConfigParser.IncludeContext,0)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_config_option

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_option" ):
                return visitor.visitConfig_option(self)
            else:
                return visitor.visitChildren(self)




    def config_option(self):

        localctx = RefindConfigParser.Config_optionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_config_option)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RefindConfigParser.MENU_ENTRY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.boot_stanza()
                pass
            elif token in [RefindConfigParser.INCLUDE]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.include()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Boot_stanzaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def menu_entry(self):
            return self.getTypedRuleContext(RefindConfigParser.Menu_entryContext,0)


        def OPEN_BRACE(self):
            return self.getToken(RefindConfigParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(RefindConfigParser.CLOSE_BRACE, 0)

        def main_option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RefindConfigParser.Main_optionContext)
            else:
                return self.getTypedRuleContext(RefindConfigParser.Main_optionContext,i)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_boot_stanza

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoot_stanza" ):
                return visitor.visitBoot_stanza(self)
            else:
                return visitor.visitChildren(self)




    def boot_stanza(self):

        localctx = RefindConfigParser.Boot_stanzaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_boot_stanza)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.menu_entry()
            self.state = 53
            self.match(RefindConfigParser.OPEN_BRACE)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.main_option()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RefindConfigParser.MENU_ENTRY) | (1 << RefindConfigParser.VOLUME) | (1 << RefindConfigParser.LOADER) | (1 << RefindConfigParser.INITRD) | (1 << RefindConfigParser.ICON) | (1 << RefindConfigParser.OS_TYPE) | (1 << RefindConfigParser.GRAPHICS) | (1 << RefindConfigParser.BOOT_OPTIONS) | (1 << RefindConfigParser.FIRMWARE_BOOTNUM) | (1 << RefindConfigParser.DISABLED))) != 0)):
                    break

            self.state = 59
            self.match(RefindConfigParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Menu_entryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MENU_ENTRY(self):
            return self.getToken(RefindConfigParser.MENU_ENTRY, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_menu_entry

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMenu_entry" ):
                return visitor.visitMenu_entry(self)
            else:
                return visitor.visitChildren(self)




    def menu_entry(self):

        localctx = RefindConfigParser.Menu_entryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_menu_entry)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(RefindConfigParser.MENU_ENTRY)
            self.state = 62
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_optionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def volume(self):
            return self.getTypedRuleContext(RefindConfigParser.VolumeContext,0)


        def loader(self):
            return self.getTypedRuleContext(RefindConfigParser.LoaderContext,0)


        def main_initrd(self):
            return self.getTypedRuleContext(RefindConfigParser.Main_initrdContext,0)


        def icon(self):
            return self.getTypedRuleContext(RefindConfigParser.IconContext,0)


        def os_type(self):
            return self.getTypedRuleContext(RefindConfigParser.Os_typeContext,0)


        def graphics(self):
            return self.getTypedRuleContext(RefindConfigParser.GraphicsContext,0)


        def main_boot_options(self):
            return self.getTypedRuleContext(RefindConfigParser.Main_boot_optionsContext,0)


        def firmware_bootnum(self):
            return self.getTypedRuleContext(RefindConfigParser.Firmware_bootnumContext,0)


        def disabled(self):
            return self.getTypedRuleContext(RefindConfigParser.DisabledContext,0)


        def sub_menu(self):
            return self.getTypedRuleContext(RefindConfigParser.Sub_menuContext,0)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_main_option

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_option" ):
                return visitor.visitMain_option(self)
            else:
                return visitor.visitChildren(self)




    def main_option(self):

        localctx = RefindConfigParser.Main_optionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_main_option)
        try:
            self.state = 74
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RefindConfigParser.VOLUME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.volume()
                pass
            elif token in [RefindConfigParser.LOADER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.loader()
                pass
            elif token in [RefindConfigParser.INITRD]:
                self.enterOuterAlt(localctx, 3)
                self.state = 66
                self.main_initrd()
                pass
            elif token in [RefindConfigParser.ICON]:
                self.enterOuterAlt(localctx, 4)
                self.state = 67
                self.icon()
                pass
            elif token in [RefindConfigParser.OS_TYPE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 68
                self.os_type()
                pass
            elif token in [RefindConfigParser.GRAPHICS]:
                self.enterOuterAlt(localctx, 6)
                self.state = 69
                self.graphics()
                pass
            elif token in [RefindConfigParser.BOOT_OPTIONS]:
                self.enterOuterAlt(localctx, 7)
                self.state = 70
                self.main_boot_options()
                pass
            elif token in [RefindConfigParser.FIRMWARE_BOOTNUM]:
                self.enterOuterAlt(localctx, 8)
                self.state = 71
                self.firmware_bootnum()
                pass
            elif token in [RefindConfigParser.DISABLED]:
                self.enterOuterAlt(localctx, 9)
                self.state = 72
                self.disabled()
                pass
            elif token in [RefindConfigParser.MENU_ENTRY]:
                self.enterOuterAlt(localctx, 10)
                self.state = 73
                self.sub_menu()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VolumeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOLUME(self):
            return self.getToken(RefindConfigParser.VOLUME, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_volume

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVolume" ):
                return visitor.visitVolume(self)
            else:
                return visitor.visitChildren(self)




    def volume(self):

        localctx = RefindConfigParser.VolumeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_volume)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(RefindConfigParser.VOLUME)
            self.state = 77
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoaderContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOADER(self):
            return self.getToken(RefindConfigParser.LOADER, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_loader

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoader" ):
                return visitor.visitLoader(self)
            else:
                return visitor.visitChildren(self)




    def loader(self):

        localctx = RefindConfigParser.LoaderContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_loader)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(RefindConfigParser.LOADER)
            self.state = 80
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_initrdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INITRD(self):
            return self.getToken(RefindConfigParser.INITRD, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_main_initrd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_initrd" ):
                return visitor.visitMain_initrd(self)
            else:
                return visitor.visitChildren(self)




    def main_initrd(self):

        localctx = RefindConfigParser.Main_initrdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_main_initrd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(RefindConfigParser.INITRD)
            self.state = 83
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IconContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ICON(self):
            return self.getToken(RefindConfigParser.ICON, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_icon

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIcon" ):
                return visitor.visitIcon(self)
            else:
                return visitor.visitChildren(self)




    def icon(self):

        localctx = RefindConfigParser.IconContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_icon)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(RefindConfigParser.ICON)
            self.state = 86
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Os_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OS_TYPE(self):
            return self.getToken(RefindConfigParser.OS_TYPE, 0)

        def OS_TYPE_PARAMETER(self):
            return self.getToken(RefindConfigParser.OS_TYPE_PARAMETER, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_os_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOs_type" ):
                return visitor.visitOs_type(self)
            else:
                return visitor.visitChildren(self)




    def os_type(self):

        localctx = RefindConfigParser.Os_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_os_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(RefindConfigParser.OS_TYPE)
            self.state = 89
            self.match(RefindConfigParser.OS_TYPE_PARAMETER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraphicsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GRAPHICS(self):
            return self.getToken(RefindConfigParser.GRAPHICS, 0)

        def GRAPHICS_PARAMETER(self):
            return self.getToken(RefindConfigParser.GRAPHICS_PARAMETER, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_graphics

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGraphics" ):
                return visitor.visitGraphics(self)
            else:
                return visitor.visitChildren(self)




    def graphics(self):

        localctx = RefindConfigParser.GraphicsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_graphics)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(RefindConfigParser.GRAPHICS)
            self.state = 92
            self.match(RefindConfigParser.GRAPHICS_PARAMETER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Main_boot_optionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOT_OPTIONS(self):
            return self.getToken(RefindConfigParser.BOOT_OPTIONS, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_main_boot_options

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMain_boot_options" ):
                return visitor.visitMain_boot_options(self)
            else:
                return visitor.visitChildren(self)




    def main_boot_options(self):

        localctx = RefindConfigParser.Main_boot_optionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_main_boot_options)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(RefindConfigParser.BOOT_OPTIONS)
            self.state = 95
            self.match(RefindConfigParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Firmware_bootnumContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FIRMWARE_BOOTNUM(self):
            return self.getToken(RefindConfigParser.FIRMWARE_BOOTNUM, 0)

        def HEX_INTEGER(self):
            return self.getToken(RefindConfigParser.HEX_INTEGER, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_firmware_bootnum

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFirmware_bootnum" ):
                return visitor.visitFirmware_bootnum(self)
            else:
                return visitor.visitChildren(self)




    def firmware_bootnum(self):

        localctx = RefindConfigParser.Firmware_bootnumContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_firmware_bootnum)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(RefindConfigParser.FIRMWARE_BOOTNUM)
            self.state = 98
            self.match(RefindConfigParser.HEX_INTEGER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DisabledContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DISABLED(self):
            return self.getToken(RefindConfigParser.DISABLED, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_disabled

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDisabled" ):
                return visitor.visitDisabled(self)
            else:
                return visitor.visitChildren(self)




    def disabled(self):

        localctx = RefindConfigParser.DisabledContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_disabled)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.match(RefindConfigParser.DISABLED)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_menuContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def menu_entry(self):
            return self.getTypedRuleContext(RefindConfigParser.Menu_entryContext,0)


        def OPEN_BRACE(self):
            return self.getToken(RefindConfigParser.OPEN_BRACE, 0)

        def CLOSE_BRACE(self):
            return self.getToken(RefindConfigParser.CLOSE_BRACE, 0)

        def sub_option(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RefindConfigParser.Sub_optionContext)
            else:
                return self.getTypedRuleContext(RefindConfigParser.Sub_optionContext,i)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_sub_menu

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_menu" ):
                return visitor.visitSub_menu(self)
            else:
                return visitor.visitChildren(self)




    def sub_menu(self):

        localctx = RefindConfigParser.Sub_menuContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_sub_menu)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.menu_entry()
            self.state = 103
            self.match(RefindConfigParser.OPEN_BRACE)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.sub_option()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RefindConfigParser.LOADER) | (1 << RefindConfigParser.INITRD) | (1 << RefindConfigParser.GRAPHICS) | (1 << RefindConfigParser.BOOT_OPTIONS) | (1 << RefindConfigParser.ADD_BOOT_OPTIONS) | (1 << RefindConfigParser.DISABLED))) != 0)):
                    break

            self.state = 109
            self.match(RefindConfigParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_optionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loader(self):
            return self.getTypedRuleContext(RefindConfigParser.LoaderContext,0)


        def sub_initrd(self):
            return self.getTypedRuleContext(RefindConfigParser.Sub_initrdContext,0)


        def graphics(self):
            return self.getTypedRuleContext(RefindConfigParser.GraphicsContext,0)


        def sub_boot_options(self):
            return self.getTypedRuleContext(RefindConfigParser.Sub_boot_optionsContext,0)


        def add_boot_options(self):
            return self.getTypedRuleContext(RefindConfigParser.Add_boot_optionsContext,0)


        def disabled(self):
            return self.getTypedRuleContext(RefindConfigParser.DisabledContext,0)


        def getRuleIndex(self):
            return RefindConfigParser.RULE_sub_option

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_option" ):
                return visitor.visitSub_option(self)
            else:
                return visitor.visitChildren(self)




    def sub_option(self):

        localctx = RefindConfigParser.Sub_optionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_sub_option)
        try:
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RefindConfigParser.LOADER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.loader()
                pass
            elif token in [RefindConfigParser.INITRD]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.sub_initrd()
                pass
            elif token in [RefindConfigParser.GRAPHICS]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.graphics()
                pass
            elif token in [RefindConfigParser.BOOT_OPTIONS]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.sub_boot_options()
                pass
            elif token in [RefindConfigParser.ADD_BOOT_OPTIONS]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.add_boot_options()
                pass
            elif token in [RefindConfigParser.DISABLED]:
                self.enterOuterAlt(localctx, 6)
                self.state = 116
                self.disabled()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_initrdContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INITRD(self):
            return self.getToken(RefindConfigParser.INITRD, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_sub_initrd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_initrd" ):
                return visitor.visitSub_initrd(self)
            else:
                return visitor.visitChildren(self)




    def sub_initrd(self):

        localctx = RefindConfigParser.Sub_initrdContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_sub_initrd)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(RefindConfigParser.INITRD)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RefindConfigParser.STRING:
                self.state = 120
                self.match(RefindConfigParser.STRING)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sub_boot_optionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOT_OPTIONS(self):
            return self.getToken(RefindConfigParser.BOOT_OPTIONS, 0)

        def STRING(self):
            return self.getToken(RefindConfigParser.STRING, 0)

        def getRuleIndex(self):
            return RefindConfigParser.RULE_sub_boot_options

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSub_boot_options" ):
                return visitor.visitSub_boot_options(self)
            else:
                return visitor.visitChildren(self)




    def sub_boot_options(self):

        localctx = RefindConfigParser.Sub_boot_optionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_sub_boot_options)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(RefindConfigParser.BOOT_OPTIONS)
            self.state = 125
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RefindConfigParser.STRING:
                self.state = 124
                self.match(RefindConfigParser.STRING)

